Fix overflow issue with code blocks
The `white-space: pre-wrap` rule for `pre code` blocks was being
inherited from `bootstrap/code`, and was causing word wrap to happen on
long lines.

This looks bad, and is much better to use the already included
`overflow: auto` rule set.

This simply overrides that one rule in `bootstrap/code`, and allows the
rest to function as it has to keep the rest.

--- a/site/_assets/css/_syntax-highlighting.scss
+++ b/site/_assets/css/_syntax-highlighting.scss
@@ -1,6 +1,19 @@
 /**
  * Syntax highlighting styles
  */
+
+/**
+ * bootstrap/code override
+ *
+ * Prevents codeblocks from wrapping their content, and allows them to
+ * `overflow: auto` as expected.
+ */
+pre {
+  code {
+    white-space: pre;
+  }
+}
+
 .highlight {
     background: #fff;
 
